<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.a1000phone.chengling.twofoxganme.MainActivity">

    <FrameLayout
        android:id="@+id/main_frame_layout_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/main_radio_group_rg"
        />
    <RadioGroup
        android:id="@id/main_radio_group_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/main_game_rbn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/main_game_text"
            android:textColor="@color/main_text_color"
            android:gravity="center"
            android:drawableTop="@drawable/main_game_image"/>
        <RadioButton
            android:id="@+id/main_gift_rbn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/main_gift_text"
            android:textColor="@color/main_text_color"
            android:gravity="center"
            android:drawableTop="@drawable/main_gift_image"/>
        <RadioButton
            android:id="@+id/main_activity_rbn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/main_activity_text"
            android:textColor="@color/main_text_color"
            android:gravity="center"
            android:drawableTop="@drawable/main_activity_image"/>
        <RadioButton
            android:id="@+id/main_book_rbn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/main_book_text"
            android:textColor="@color/main_text_color"
            android:gravity="center"
            android:drawableTop="@drawable/main_book_image"/>
        <RadioButton
            android:id="@+id/main_person_rbn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/main_person_text"
            android:textColor="@color/main_text_color"
            android:gravity="center"
            android:drawableTop="@drawable/main_person_image"/>
    </RadioGroup>
</RelativeLayout>
