<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <TextView
        android:id="@+id/person_title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="个人中心"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:background="@color/pink"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/person_view_pager"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/pink"
        android:drawableLeft="@drawable/user_head_dark"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:layout_below="@id/person_title_txt"
        />
    <Button
        android:id="@+id/person_btn"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/person_hear_text"
        android:textColor="@color/white"
        android:background="@drawable/butto_frame"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:layout_alignBottom="@+id/person_view_pager"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="click"
        />
    <Button
        android:id="@+id/twofox_formulate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/ic_leftmenu_title2"
        android:text="@string/person_twofox_formulate"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:layout_below="@id/person_view_pager"
        android:onClick="click"
        />
    <Button
        android:id="@+id/my_card_box"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/ic_leftmenu_title3"
        android:text="@string/person_my_card_box"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:layout_below="@+id/twofox_formulate"
        android:layout_marginTop="10dp"
        android:paddingLeft="15dp"
        android:background="@color/white"
        android:drawablePadding="10dp"
        android:onClick="click"/>
    <Button
        android:id="@+id/my_message"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/ic_leftmenu_title7"
        android:text="@string/person_my_message"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:paddingLeft="15dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:drawablePadding="10dp"
        android:layout_below="@id/my_card_box"
        android:onClick="click"
        />
    <Button
        android:id="@+id/person_game_manage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/game_manage"
        android:text="@string/person_game_manage"
        android:textSize="15sp"
        android:paddingLeft="15dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:layout_below="@+id/my_message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="click"/>
    <Button
        android:id="@+id/person_system_set"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ic_leftmenu_title5"
        android:text="@string/person_system_set"
        android:textSize="15sp"
        android:paddingLeft="15dp"
        android:background="@color/white"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:layout_below="@id/person_game_manage"
        android:onClick="click"
        />
    <Button
        android:id="@+id/person_service_qq"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/customer_service_ic"
        android:text="@string/person_service_qq"
        android:textSize="15sp"
        android:paddingLeft="15dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:layout_below="@id/person_system_set"

        />


</RelativeLayout>