<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_over_time"
        android:textColor="@color/red"
        android:paddingLeft="20dp"
        android:layout_above="@+id/acitivity_item_image_iv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:id="@+id/acitivity_time_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_hear_text"
        android:layout_alignParentTop="true"
        android:textColor="@color/black"
        android:layout_toRightOf="@id/textView"
        android:layout_toEndOf="@id/textView"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"/>
    <ImageView
        android:id="@+id/acitivity_item_image_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/user_head_dark"
        android:layout_below="@id/acitivity_time_txt"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/acitivity_one_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_twofox_formulate"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_below="@id/acitivity_item_image_iv"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/acitivity_two_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="参与奖励："
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:textColor="@color/black"
        android:layout_below="@id/acitivity_one_txt"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_below="@id/acitivity_one_txt"
        android:id="@+id/textView2"/>
   <TextView
       android:id="@+id/acitivity_three_txt"
       android:layout_width="wrap_content"
       android:layout_height="30dp"
       android:text="@string/activity_hear_text"
       android:gravity="center_vertical"
       android:layout_below="@id/acitivity_two_txt"
       android:drawableLeft="@drawable/huodong_good"
       />
    <TextView
        android:id="@+id/acitivity_four_txt"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/activity_hear_text"
        android:drawableLeft="@drawable/huodong_reply"
        android:gravity="center_vertical"
        android:layout_alignTop="@id/acitivity_three_txt"
        android:layout_toRightOf="@id/acitivity_three_txt"
        android:layout_toEndOf="@id/acitivity_three_txt"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"/>
    <Button
        android:id="@+id/acitivity_three_btn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="立即参加"
        android:textColor="#40E0D0"
        android:background="@drawable/activity_botton_two"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>